# frey

./: .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
docs/: Doxyfile.in
include/camera/: camera.h
include/math/: .vector.h.swp  ray.h  vector.h
include/tracer/: ppm.h
src/: main.cpp
src/camera/: camera.cpp
src/math/: ray.cpp  vector.cpp
src/tracer/: ppm.cpp
test/: test_main.cpp
test/math_tests/: vector_test.cpp
tests/: CMakeLists.txt
tests/ray_tests/: CMakeLists.txt  ray_test.cpp
tests/vector_tests/: CMakeLists.txt  vector_test.cpp
